tests/functional/repl/doc-constant.expected
Nix <nix version>
Type :? for help.

nix-repl> :l doc-comments.nix
Added <number omitted> variables.

nix-repl> :doc constant
error: value does not have documentation

nix-repl> :doc lib.version
Attribute `version`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:47:3


Immovably fixed.

nix-repl> :doc lib.attr.empty
Attribute `empty`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:52:3


Unchangeably constant.

nix-repl> :doc lib.attr.undocument

       … while evaluating the attribute 'attr.undocument'
         at /path/to/tests/functional/repl/doc-comments.nix:52:3:
           51|   */
           52|   lib.attr.empty = { };
             |   ^
           53|



       at «string»:1:1:
            1| lib.attr.undocument
             | ^

       error: attribute 'undocument' missing

       Did you mean undocumented?

nix-repl> :doc (import ./doc-comments.nix).constant
Attribute `constant`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:42:3


Firmly rigid.

nix-repl> :doc (import ./doc-comments.nix).lib.version
Attribute `version`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:47:3


Immovably fixed.

nix-repl> :doc (import ./doc-comments.nix).lib.attr.empty
Attribute `empty`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:52:3


Unchangeably constant.

nix-repl> :doc (import ./doc-comments.nix).lib.attr.undocumented
Attribute `undocumented`

  … defined at /path/to/tests/functional/repl/doc-comments.nix:54:3

No documentation found.

nix-repl> :doc missing
at «string»:1:1:
            1| missing
             | ^

       error: undefined variable 'missing'

nix-repl> :doc constanz
at «string»:1:1:
            1| constanz
             | ^

       error: undefined variable 'constanz'

nix-repl> :doc missing.attr
at «string»:1:1:
            1| missing.attr
             | ^

       error: undefined variable 'missing'

nix-repl> :doc lib.missing
at «string»:1:1:
            1| lib.missing
             | ^

       error: attribute 'missing' missing

nix-repl> :doc lib.missing.attr
at «string»:1:1:
            1| lib.missing.attr
             | ^

       error: attribute 'missing' missing

nix-repl> :doc lib.attr.undocumental

       … while evaluating the attribute 'attr.undocumental'
         at /path/to/tests/functional/repl/doc-comments.nix:52:3:
           51|   */
           52|   lib.attr.empty = { };
             |   ^
           53|



       at «string»:1:1:
            1| lib.attr.undocumental
             | ^

       error: attribute 'undocumental' missing

       Did you mean undocumented?
